reformat + added recyclerView delete/restore swipe handler

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="train">Üben</string>
-    <string name="addWords">Wörter übersicht</string>
+    <string name="train">Training</string>
+    <string name="addWords">Vokabel Übersicht</string>
 </resources>
