--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button_add_words">Add Words</string>
+    <string name="drawer_label_library">Library</string>
+    <string name="drawer_label_settings">Settings</string>
+    <string name="drawer_label_learn">Learn</string>
+    <string name="app_name_full">The Customizable Language Trainer</string>
 </resources>
