--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,27 @@
 <resources>
+
+    <!-- General app related Strings-->
     <string name="app_name" translatable="false">CuLa</string>
-    <string name="train">Train</string>
-    <string name="addWords">Add Words</string>
-    <string name="title_activity_main_drawer">MainDrawerActivity</string>
+    <string name="app_name_full">The Customizable Language Trainer</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="button_add_words">Add Words</string>
+    <!-- Drawer item names-->
     <string name="drawer_label_library">Library</string>
     <string name="drawer_label_settings">Settings</string>
-    <string name="drawer_label_learn">Learn</string>
-    <string name="app_name_full">The Customizable Language Trainer</string>
+    <string name="drawer_label_train">Train</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Library Strings-->
     <string name="delete">Delete</string>
     <string name="word_removed_from_library">Word removed from Library!</string>
     <string name="undo">UNDO</string>
     <string name="restored">Restored</string>
+
+    <!-- Update Library Strings-->
+    <string name="update_library_hint_foreign_word">Add the foreign word here</string>
+    <string name="update_library_hint_native_word">Add the native word here</string>
+    <string name="update_library_button_save_word">Save</string>
+    <string name="update_library_button_save_word_return">Save &amp; return</string>
 
 </resources>
