--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="drawer_label_library">Library</string>
     <string name="drawer_label_settings">Settings</string>
     <string name="drawer_label_train">Train</string>
+    <string name="drawer_label_quote">Quote of the Day</string>
 
     <!-- Library Strings-->
     <string name="delete">Delete</string>
