Lessons can now be added and updated. SOmetimes mappings are not stored for new entries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="update_lesson_hint_description">Add a description of the lesson</string>
     <string name="update_lesson_label_description">Lesson description</string>
     <string name="update_lesson_label_mapping">Library entries belonging to the lesson (autosaved)</string>
+    <string name="button_return">Return</string>
 
 
 </resources>
