--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="drawer_label_settings">Settings</string>
     <string name="drawer_label_train">Train</string>
     <string name="drawer_label_quote">Quote of the Day</string>
+    <string name="drawer_label_lessons">Lessons</string>
 
     <!-- Library Strings-->
     <string name="word_removed_from_library">Word removed from Library!</string>
@@ -16,8 +17,10 @@
     <string name="undo">UNDO</string>
     <string name="restored">Restored</string>
     <string name="add">Add</string>
-    <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
+    <string name="ok">OK</string>
+    <string name="button_return">Return</string>
+    <string name="cancel">Cancel</string>
 
     <!-- Update Library Strings-->
     <string name="update_library_hint_foreign_word">Add the foreign word</string>
@@ -27,9 +30,6 @@
     <string name="update_library_button_label_knowledgeLevel">How well do you know this word pair already?</string>
     <string name="update_library_label_native_word">Native Word:</string>
     <string name="update_library_label_foreign_word">Foreign Word:</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Settings Strings-->
     <string name="settings_select_language_key" translatable="false">languages</string>
@@ -42,8 +42,7 @@
     <string name="settings_delete_language_key" translatable="false">deleteLanguage</string>
     <string name="settings_delete_language_title">Delete Language</string>
     <string name="settings_delete_language_summary">Delete the currently selected language and all words for it.</string>
-
-
+    <string name="settings_delete_language_title_warning">Really remove this language and all words belonging to it?</string>
     <string name="settings_default_knowledgeLevel_title">Default Knowledge Level</string>
     <string name="settings_default_knowledgeLevel_key" translatable="false">defaultKnowledgeLevel</string>
     <string name="settings_default_knowledgeLevel_default">3</string>
@@ -60,16 +59,23 @@
     <string name="knowledgeLevel3_key" translatable="false">3</string>
     <string name="knowledgeLevel4_key" translatable="false">4</string>
     <string name="knowledgeLevel5_key" translatable="false">5</string>
-    <string name="settings_delete_language_title_warning">Really remove this language and all words belonging to it?</string>
-    <string name="ok">Ok</string>
-    <string name="drawer_label_lessons">Lessons</string>
+
+    <!-- Lesson Overview Strings -->
     <string name="lesson_deleted">Lesson deleted</string>
+
+    <!-- Update Lesson strings-->
     <string name="update_lesson_label_name">Name of the Lesson</string>
     <string name="update_lesson_hint_name">Add the name of the lesson</string>
     <string name="update_lesson_hint_description">Add a description of the lesson</string>
     <string name="update_lesson_label_description">Lesson description</string>
     <string name="update_lesson_label_mapping">Library entries belonging to the lesson (autosaved)</string>
-    <string name="button_return">Return</string>
+
+    <!-- Start Training strings-->
+    <string name="start_training_label_instructions">Select your training settings:</string>
+    <string name="start_training_label_lesson">Lesson:</string>
+    <string name="start_training_label_number_of_words">Number of words:</string>
+    <string name="start_training_label_knowledge_level">Knowledge level:</string>
+    <string name="start_training_button">Start Training</string>
 
 
 </resources>
