first draft of widget + some minor fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,8 @@
     <string name="drawer_label_statistics">Statistics</string>
     <string name="statistics_label_words_by_level">Words in Library by Knowledge Level:</string>
     <string name="statistics_label_activity">Activity over the last days:</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 
 </resources>
