--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="drawer_label_train">Train</string>
     <string name="drawer_label_quote">Quote of the Day</string>
     <string name="drawer_label_lessons">Lessons</string>
+    <string name="drawer_label_statistics">Statistics</string>
 
     <!-- Library Strings-->
     <string name="word_removed_from_library">Word removed from Library!</string>
@@ -102,11 +103,21 @@
     <string name="activity_training_hint_translated_word">Translated word</string>
     <string name="activity_training_label_translate_word">Translate the following word:</string>
     <string name="activity_training_label_progress">Progress: %1$d from %2$d</string>
-    <string name="drawer_label_statistics">Statistics</string>
+
+    <!-- Statistics strings-->
     <string name="statistics_label_words_by_level">Words in Library by Knowledge Level:</string>
     <string name="statistics_label_activity">Activity over the last days:</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
 
-
+    <!-- App widget strings-->
+    <!--<string name="add_widget">Add widget</string>-->
+    <string name="widget_description_last_learned">Last time you trained with CuLa</string>
+    <string name="widget_description_worst_lesson">Currently worst lesson.</string>
+    <string name="widget_last_learned_never">Time to train with Cula.</string>
+    <string name="widget_last_learned_recently">You trained recently, very good, keep it up!</string>
+    <string name="widget_last_learned_last_3_days">You trained during the last days, keep
+        it up!</string>
+    <string name="widget_last_learned_last_7_days">Your last training was already some days
+        ago. You should train regularly.</string>
+    <string name="widget_last_learned_not">You didn\'t train for over a week, try to train
+        more regularly.</string>
 </resources>
