--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="drawer_label_library">Library</string>
     <string name="drawer_label_settings">Settings</string>
     <string name="drawer_label_train">Train</string>
-    <string name="drawer_label_quote">Quote of the Day</string>
+    <string name="drawer_label_quote">Motivational Quote</string>
     <string name="drawer_label_lessons">Lessons</string>
     <string name="drawer_label_statistics">Statistics</string>
 
