--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="drawer_label_library">Library</string>
     <string name="drawer_label_settings">Settings</string>
     <string name="drawer_label_train">Train</string>
-    <string name="drawer_label_quote">Motivational Quote</string>
     <string name="drawer_label_lessons">Lessons</string>
     <string name="drawer_label_statistics">Statistics</string>
 
@@ -137,11 +136,11 @@
         more regularly.</string>
     <string name="widget_lesson_proposal">Maybe have a look at the <b>%1$s</b> lesson next.</string>
 
-    <!--Quote strings-->
-    <string name="quote_initial_text">Welcome to CuLa, the Customizable Language Trainer.
+
+    <!-- welcome -->
+    <string name="initial_text">Welcome to CuLa, the Customizable Language Trainer.
         <br /> As first step you should add the language you want to learn in the settings.
         <br />I hope you have a lot of fun with CuLa.</string>
-    <string name="quote_initial_author">Stefan</string>
 
 
 </resources>
