added feedback for incorrect words

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,7 @@
     <string name="activity_training_label_translate_word">Translate the following word:</string>
     <string name="activity_training_label_progress">Progress: %1$d from %2$d</string>
     <string name="activity_training_empty_translation">Enter a translation!</string>
+    <string name="activity_training_wrong_translation">Wrong, correct translation:\t</string>
 
 
     <!-- Statistics strings-->
